RESOLVED FIXED91287
[BlackBerry] Crash in select popup
https://bugs.webkit.org/show_bug.cgi?id=91287
Summary [BlackBerry] Crash in select popup
George Staikos
Reported 2012-07-13 14:49:10 PDT
#2 WebCore::RenderObject::repaint (this=0x0, immediate=false) Reported in the wild, no known way to produce it.
Attachments
Guard against null renderer (1.46 KB, patch)
2012-07-13 14:51 PDT, George Staikos
no flags
George Staikos
Comment 1 2012-07-13 14:51:33 PDT
Created attachment 152340 [details] Guard against null renderer
Crystal Zhang
Comment 2 2012-07-13 14:53:00 PDT
looks ok for me.
Rob Buis
Comment 3 2012-07-13 15:00:35 PDT
Comment on attachment 152340 [details] Guard against null renderer Looks good.
WebKit Review Bot
Comment 4 2012-07-13 15:46:54 PDT
Comment on attachment 152340 [details] Guard against null renderer Clearing flags on attachment: 152340 Committed r122638: <http://trac.webkit.org/changeset/122638>
WebKit Review Bot
Comment 5 2012-07-13 15:46:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.