[BlackBerry] Fix crash due to unguarded use of renderer in select popup. https://bugs.webkit.org/show_bug.cgi?id=91287

Reviewed by Rob Buis.

No known testcase for this.  Found in the wild.

* WebCoreSupport/SelectPopupClient.cpp:
(WebCore::SelectPopupClient::setValueAndClosePopup):


Canonical link: https://commits.webkit.org/109110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122638 268f45cc-cd09-0410-ab3c-d52691b4dbfc